--- a/index.html
+++ b/index.html
@@ -1,9 +1,22 @@
 <html>
-<head><title>Karate Wikipedia</title></head>
+<head><title>Karate Wikipedia</title>
+
+    <link rel="icon" href="https://res.cloudinary.com/swastik-singh-s-website/image/upload/v1643089821/5132b3bcc13366589c98b7695c89723d_gbysqa.png" type="image/x-icon">
+    
+<style>
+.top-right {
+    position: absolute;
+    top: 900px;
+    right: 100px;
+  }
+  </style>
+</head>
 <h1><center><p style="font-family: Gabriola ;">Karate Wikipedia</p></center></h1>
 <hr>
-<h4>Country : Japan</h4>
-<h4>Founder : Funakoshi Gichin (November 10, 1868 – April 26, 1957)</h4>
+<body style="background-color: rgb(255, 123, 0);">
+<h3><p style="font-family: Cambria ;">Country : Japan</p></h3>
+<h3><p style="font-family: Cambria ;">Founder : Funakoshi Gichin (November 10, 1868 – April 26, 1957)</p></h3>
+<br>
 <p style="font-family: Comic Sans MS;">Karate  is a martial art developed in the Ryukyu Kingdom. It developed from the indigenous Ryukyuan martial arts under the influence of Chinese martial arts, particularly Fujian White Crane.Karate is now predominantly a striking art using punching, kicking, knee strikes, elbow strikes and open-hand techniques such as knife-hands, spear-hands and palm-heel strikes. Historically, and in some modern styles, grappling, throws, joint locks, restraints and vital-point strikes are also taught.A karate practitioner is called a karateka.</p>
 
 <p style="font-family: Comic Sans MS;">The Empire of Japan annexed the Ryukyu Kingdom in 1879. Karate came to mainland Japan in the early 20th century during a time of migration as Ryukyuans, especially from Okinawa, looked for work in the main islands of Japan.It was systematically taught in Japan after the Taishō era of 1912–1926.In 1922, the Japanese Ministry of Education invited Gichin Funakoshi to Tokyo to give a karate demonstration. In 1924, Keio University established the first university karate club in mainland Japan, and by 1932 major Japanese universities had karate clubs.In this era of escalating Japanese militarism,the name was changed from 唐手 to both of which are pronounced karate in Japanese – to indicate that the Japanese wished to develop the combat form in Japanese style.After World War II, Okinawa became (1945) an important United States military site and karate became popular among servicemen stationed there.</p>
@@ -15,5 +28,11 @@
 <p style="font-family: Comic Sans MS;">On 28 September 2015 karate featured on a shortlist (along with baseball, softball, skateboarding, surfing, and sport climbing) for consideration for inclusion in the 2020 Summer Olympics. On 1 June 2016 the International Olympic Committee's executive board announced they were supporting the inclusion of all five sports (counting baseball and softball as only one sport) for inclusion in the 2020 Games.</p>
 
 <p style="font-family: Comic Sans MS;">Web Japan (sponsored by the Japanese Ministry of Foreign Affairs) claims that karate has 50 million practitioners worldwide,while the World Karate Federation claims there are 100 million practitioners around the world.</p>
+<hr>
 
+<a href="https://mygethubin.github.io/whole-main/"><img src="https://res.cloudinary.com/swastik-singh-s-website/image/upload/v1643089821/5132b3bcc13366589c98b7695c89723d_gbysqa.png" ></a>
+
+<div class="top-right"><p style="font-family: Comic Sans MS;">This is MetaToons use get all information about studies and use get all old and new Movies,Series,Comics,Stotybook .<br> So click on this image and enjoy.</p> </div>
+
+</body>
 </html>
